openapi para summary performance y agrega algunos chequeos
